# bevy_aoe

./: Cargo.toml  flake.nix
.github/workflows/: distribute.yml
src/: client.rs  game.rs  main.rs  networking.rs  server.rs
src/game/: minion.rs  player.rs  resource.rs
